--- a/style.css
+++ b/style.css
@@ -367,7 +367,7 @@ body {
     position: relative;
     background: var(--bg-card);
     border-radius: var(--radius-md);
-    padding: var(--spacing-md);
+    padding: initial;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -1142,11 +1142,11 @@ body.dark-theme .theme-toggle-btn {
 /* Desktop : plus large */
 @media (min-width: 768px) {
     .app-container {
-        max-width: 900px; /* ou 100% pour pleine largeur */
+        max-width: 95%; /* ou 100% pour pleine largeur */
     }
     
     .radios-grid {
-        grid-template-columns: repeat(6, 1fr); /* Plus de colonnes */
+        grid-template-columns: repeat(12, 1fr); /* Plus de colonnes */
     }
 }
 
